# DocuMint

./: .cursorrules  .gitignore  CHANGELOG.md  Dockerfile  DocuMind_AI_Project_Guideline.docx  Makefile  README.md  celery_app.py  pyproject.toml
.playwright-mcp/: page-2026-06-08T14-43-52-847Z.yml  page-2026-06-08T14-44-20-570Z.yml  page-2026-06-08T14-45-37-451Z.yml
api/: deps.py  main.py  ml_preflight.py
api/models/: __init__.py  base.py  citation.py  document.py  extraction.py  index.py  parse.py  review.py  rls.sql  split_classify.py  webhook.py
api/routers/: artifacts.py  classify.py  evals.py  extract.py  health.py  index.py  parse.py  retrieval.py  reviews.py  split.py  webhooks.py
api/schemas/: __init__.py  classify.py  common.py  evals.py  extract.py  index.py  parse.py  reviews.py  split.py  webhooks.py
api/services/: __init__.py  extract_service.py  index_service.py  parse_service.py  storage.py
documind_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppProviders.tsx  ErrorBoundary.tsx  PDFViewer.tsx  Sidebar.tsx
frontend/lib/: api.ts  config.ts  store.ts  types.ts
golden_set/: README.md  academic_paper.expected.json  bank_statement.expected.json  handwritten.expected.json  invoice.expected.json  phone_photo.expected.json  scanned_contract.expected.json  sec_10k.expected.json
golden_set/academic_math/: expected_markdown.md  input.pdf.README
golden_set/bank_statement/: expected_markdown.md  input.pdf.README
golden_set/handwritten/: expected_markdown.md  input.pdf.README
infra/: .env.example  docker-compose.yml
migrations/: env.py
scripts/: check_models.py  download_models.py  generate_golden_set.py  start_dev.sh
tests/: conftest.py
workers/: __init__.py  assembly.py  classify_worker.py  extraction.py  extraction_pipeline.py  indexing.py  intake.py  layout.py  parse_pipeline.py  split_worker.py  verifier.py
(+78 files in other folders)
