[project]
name = "documind-ai"
version = "0.1.0"
description = "Open-core agentic Document AI platform with transparent verification and bbox citations."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "aioboto3>=12.4.0",
  "redis>=5.0.0",
  "celery>=5.4.0",
  "PyMuPDF>=1.24.0",
  "numpy>=1.26.0",
  "pillow>=10.1.0",
  "scikit-image>=0.23.0",
  "scikit-learn>=1.5.0",
  "httpx>=0.27.0",
  "docling>=2.98.0",
  "weasyprint>=62.0",
  "playwright>=1.45.0",
  "rapidocr-onnxruntime>=1.3.0",
  "open-clip-torch>=2.24.0",
  "outlines>=1.3.0",
  "transformers>=5.3.0,<5.9.0",
  "torch>=2.3.0",
  "openai>=1.50.0",
  "anthropic>=0.40.0",
  "sentence-transformers>=5.0.0",
  "colpali-engine>=0.3.16",
  "qdrant-client>=1.18.0",
  "bcrypt>=4.1.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "prometheus-client>=0.20.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: opt-in tests that require external services or heavyweight model dependencies",
  "regression: golden-set quality gates that require local golden PDFs and model dependencies"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "workers*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
